examples/test/testpolicy14839.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14839
  namespace: namespace295
spec:
  podSelector:
    matchLabels:
      key16: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value18
          key47: value30
          key0: value6
      podSelector:
        matchLabels:
          key12: value2
          key9: value7
